# preventive_maintenace

./: .gitignore  README.md  data_analysis.ipynb  pyproject.toml
